--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ text-align:center;
   justify-content: center;
 }
 /* write neccessary css for the grid- simple box style, use the css reset from the star project 
-
+*/
  
 
 @media (prefers-color-scheme: light) {
